force-app/main/default/objects/Ticket_Hour__c/Ticket_Hour__c.object-meta.xml
<CustomObject>
    <label>Ticket Hour</label>
    <nameField>
        <displayFormat>TH{000000}</displayFormat>
        <label>Ticket Hour Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>