force-app/main/default/objects/Ticket_Hour__c/fields/Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged__c</fullName>
    <description>The number of hours logged for this Ticket Hour.</description>
    <inlineHelpText
  >The number of hours logged for this Ticket Hour.</inlineHelpText>
    <label>Hours Logged</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>