force-app/main/default/objects/Ticket_Hour__c/fields/Hours_Logged_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Hours Logged Date</label>
    <type>Date</type>
</CustomField>