force-app/main/default/objects/Ticket_Hour__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes on what these ticket hours were used for.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>