force-app/main/default/objects/Ticket_Hour__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description
  >The Ticket associated with the logged Ticket Hours.</description>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipName>Ticket_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>