force-app/main/default/objects/Ticket_Hour__c/listViews/Ticket_Hours_LF.listView-meta.xml
<ListView>
    <fullName>Ticket_Hours_LF</fullName>
    <columns>NAME</columns>
    <columns>Ticket__c</columns>
    <columns>Notes__c</columns>
    <columns>Hours_Logged_Date__c</columns>
    <columns>Hours_Logged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Lauren Fahndrich</value>
    </filters>
    <label>Ticket Hours - LF</label>
</ListView>